force-app/main/default/objects/Indicator_Assign__c/Indicator_Assign__c.object-meta.xml
<CustomObject>
    <description>Assignment of a single indicator to a GM Data record</description>
    <label>Indicator Assign</label>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>Indicator Assign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicator Assigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>