force-app/main/default/objects/Indicator_Assign__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>The comment (if any) associated with this indicator assignment</description>
    <inlineHelpText>The comment (if any) associated with this indicator assignment</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>