force-app/main/default/objects/Indicator_Assign__c/fields/GM_Data__c.field-meta.xml
<CustomField>
    <fullName>GM_Data__c</fullName>
    <description>The GM Data to which this indicator assign record is linked</description>
    <inlineHelpText>The GM Data to which this indicator assign record is linked</inlineHelpText>
    <label>GM Data</label>
    <referenceTo>GM_Data__c</referenceTo>
    <relationshipLabel>Indicator Assigns</relationshipLabel>
    <relationshipName>Indicator_Assigns</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>