force-app/main/default/objects/Indicator_Assign__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <description>The indicator to which this indicator assign record is linked</description>
    <inlineHelpText>The indicator to which this indicator assign record is linked</inlineHelpText>
    <label>Indicator</label>
    <referenceTo>Indicator__c</referenceTo>
    <relationshipLabel>Indicator Assigns</relationshipLabel>
    <relationshipName>Indicator_Assigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>