force-app/main/default/objects/Indicator_Assign__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>The quantity (if any) associated with this indicator assignment</description>
    <inlineHelpText>The quantity (if any) associated with this indicator assignment</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>